force-app/main/default/objects/Product2/fields/OCN__c.field-meta.xml
<CustomField>
    <fullName>OCN__c</fullName>
    <label>OCN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>