force-app/main/default/objects/Product2/fields/OptionCode__c.field-meta.xml
<CustomField>
    <fullName>OptionCode__c</fullName>
    <label>Option Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>