force-app/main/default/objects/Product2/fields/OptionGroup2Name__c.field-meta.xml
<CustomField>
    <fullName>OptionGroup2Name__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Option Group2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>