force-app/main/default/objects/Product2/fields/PackageCode__c.field-meta.xml
<CustomField>
    <fullName>PackageCode__c</fullName>
    <label>Package</label>
    <length>6</length>
    <type>Text</type>
</CustomField>