force-app/main/default/objects/Product2/fields/PackageOptionsCode__c.field-meta.xml
<CustomField>
    <fullName>PackageOptionsCode__c</fullName>
    <label>Package &amp; Options</label>
    <length>6</length>
    <type>Text</type>
</CustomField>