force-app/main/default/objects/Product2/fields/ParentExternalId__c.field-meta.xml
<CustomField>
    <fullName>ParentExternalId__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>ParentExternalId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>