force-app/main/default/objects/Product2/fields/Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_Per_Unit__c</fullName>
    <description>US- 2148, Created by- Riddhi Mittal on 1/14/2021</description>
    <label>Price Per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>