force-app/main/default/objects/Product2/fields/Product_Detail_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail_Type__c</fullName>
    <description>Created Date: 27th Oct 2020
Created By: Mayank Pant
User Story
Purpose:</description>
    <label>Product Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Detail_Type</valueSetName>
    </valueSet>
</CustomField>