force-app/main/default/objects/Product2/fields/ProductDetailType__c.field-meta.xml
<CustomField>
    <fullName>ProductDetailType__c</fullName>
    <label>Product Detail Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductDetailType</valueSetName>
    </valueSet>
</CustomField>