force-app/main/default/objects/Product2/fields/ProductTest__c.field-meta.xml
<CustomField>
    <fullName>ProductTest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Product Test</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Product Test)</relationshipLabel>
    <relationshipName>Products1</relationshipName>
    <type>Lookup</type>
</CustomField>