force-app/main/default/objects/Product2/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 27th Oct 2020
User Story:
Purpose:</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>