force-app/main/default/objects/Product2/fields/Repair_Type__c.field-meta.xml
<CustomField>
    <fullName>Repair_Type__c</fullName>
    <description>Created By: Mayank Pant
Created Date: 27th Oct 2020
User Story: 
Purpose:</description>
    <label>Repair Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Repair_Job_Type</valueSetName>
    </valueSet>
</CustomField>