force-app/main/default/objects/Product2/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>RequestType</label>
    <length>1</length>
    <type>Text</type>
</CustomField>