force-app/main/default/objects/Product2/fields/SalesCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>SalesCompanyCode__c</fullName>
    <label>Sales Company Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>