force-app/main/default/objects/Product2/fields/SalesSpecGroup__c.field-meta.xml
<CustomField>
    <fullName>SalesSpecGroup__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Sales Spec Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>