force-app/main/default/objects/Product2/fields/SalesTrim__c.field-meta.xml
<CustomField>
    <fullName>SalesTrim__c</fullName>
    <label>Sales Trim</label>
    <length>3</length>
    <type>Text</type>
</CustomField>