force-app/main/default/objects/Product2/fields/SAPKey__c.field-meta.xml
<CustomField>
    <fullName>SAPKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>