force-app/main/default/objects/Product2/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>US- 2148 Created by:- Riddhi Mittal on 1/14/2021</description>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>