force-app/main/default/objects/Product2/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <description>US-2148, Created by:- Riddhi Mittal on 1/14/2021</description>
    <label>Service Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>