force-app/main/default/objects/Product2/fields/Supersession_Flag__c.field-meta.xml
<CustomField>
    <fullName>Supersession_Flag__c</fullName>
    <formula>if( AfterSales_Supersession__c!=&apos;&apos;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;&quot;,35,35),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supersession Flag</label>
    <type>Text</type>
</CustomField>