force-app/main/default/objects/Product2/fields/Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_ID__c</fullName>
    <description>Created By: Manoj Kumar
 Created Date: 3/12/2020
 User Story: Gd-841
 Purpose :- After Sales service available of Customer.</description>
    <label>Supplier ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>