force-app/main/default/objects/Product2/fields/Taxrate__c.field-meta.xml
<CustomField>
    <fullName>Taxrate__c</fullName>
    <description>US-2148, Created by:- Riddhi Mittal on 1/14/2021</description>
    <label>Taxrate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>