force-app/main/default/objects/Product2/fields/TestFamilyFilter__c.field-meta.xml
<CustomField>
    <fullName>TestFamilyFilter__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <formula>TEXT(Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Family Filter(x)</label>
    <type>Text</type>
</CustomField>