force-app/main/default/objects/Product2/fields/TrimCode__c.field-meta.xml
<CustomField>
    <fullName>TrimCode__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Trim Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>