force-app/main/default/objects/Product2/fields/UnitPriceVAT__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceVAT__c</fullName>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Unit Price VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>