force-app/main/default/objects/Product2/fields/ValidFromDate__c.field-meta.xml
<CustomField>
    <fullName>ValidFromDate__c</fullName>
    <label>Valid From Date</label>
    <type>Date</type>
</CustomField>