force-app/main/default/objects/Product2/fields/ValidToDate__c.field-meta.xml
<CustomField>
    <fullName>ValidToDate__c</fullName>
    <label>Valid To Date</label>
    <type>Date</type>
</CustomField>