force-app/main/default/objects/Product2/fields/VehicleModelPart__c.field-meta.xml
<CustomField>
    <fullName>VehicleModelPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created By: Mayank Pant Created Date: 21st Oct 2020 User Story: https://jira.hyundai-autoever.eu/browse/GD-1238 Purpose:</description>
    <label>Vehicle Model (DPOS)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>VehicleModel__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Part</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>VehicleModel__c</referenceTo>
    <relationshipLabel>Vehicle (Part)</relationshipLabel>
    <relationshipName>ProductParts</relationshipName>
    <type>Lookup</type>
</CustomField>