force-app/main/default/objects/Product2/recordTypes/Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Vehicle</fullName>
    <active>true</active>
    <description>This record type will be used for identifying Vehicle products.</description>
    <label>Vehicle</label>
</RecordType>