force-app/main/default/objects/Product2/validationRules/AfterSales_Masterfile_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AfterSales_Masterfile_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>StartDate__c  &gt;  EndDate__c
&amp;&amp;
$Profile.Name != &quot;DIH Integration Profile&quot;</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>End Date Cannot be before Start Date</errorMessage>
</ValidationRule>