force-app/main/default/objects/Product2/validationRules/Local_Record_Type_Masterfile_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Local_Record_Type_Masterfile_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    $RecordType.Name = &quot;Local Record&quot;,  
     NOT( CONTAINS( Name , &quot;Local&quot;)) ,
     NOT( CONTAINS( Name , &quot;LOCAL&quot;)),
     NOT( CONTAINS( Name , &quot;local&quot;)) ,
     NOT( CONTAINS( Name , &quot;lOCAL&quot;))
   
)
&amp;&amp;
$Profile.Name != &quot;DIH Integration Profile&quot;</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter &quot;Local&quot; word on Masterfile Name</errorMessage>
</ValidationRule>