force-app/main/default/objects/Product2/listViews/Labor_CH.listView-meta.xml
<ListView>
    <fullName>Labor_CH</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Switzerland</value>
    </filters>
    <label>Labor CH</label>
</ListView>