force-app/main/default/objects/Product2/listViews/Labor_GER.listView-meta.xml
<ListView>
    <fullName>Labor_GER</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>Germany</value>
    </filters>
    <label>Labor GER</label>
</ListView>